OPTION: Don't use an ERB partial
If you don't think you're going to want data
sharing (hard to say at this point), consider
in-lining the knowledge held in the partial.

--- a/app/views/authors/show.js.erb
+++ b/app/views/authors/show.js.erb
@@ -1,2 +1,2 @@
-$('#zoom-in').html('<%=escape_javascript render partial: 'author_name', locals: { author: @author } %>')
+$('#zoom-in').html('<%=escape_javascript render text: @author.name %>')
 
